@@ -1,3 +1,9 @@
+2006-09-28  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/seahorse-pgp-operation.c:
+    * src/seahorse-pgp-source.c: Display error when keys to import are 
+    created in the future. Fixes #356302
+    
 2006-09-23  Nate Nielsen  <nielsen@memberwebs.com>
 
     * src/seahorse-key-manager.c:
